--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -10,12 +10,30 @@
     <meta name="author" content="">
 
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+      .navbar {
+        margin-bottom: 0;
+        border-radius: 0;
+      }
+  
+      .row.content {height: 450px}
+      
+      /* Set black background color, white text and some padding */
+      footer {
+        background-color: #555;
+        color: white;
+        padding: 15px;
+      }
+    </style>
 
     <!-- Bootstrap CSS -->
-    <link href="{% static 'main/css/bootstrap.min.css' %}" rel="stylesheet">
+    <!-- <link href="{% static 'main/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{% static 'main/css/style.css' %}" rel="stylesheet">
+    <!-- <link href="{% static 'main/css/style.css' %}" rel="stylesheet"> --> 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,9 +44,25 @@
 </head>
 
 <body>
+        <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>                        
+                    </button>
+                    <a class="navbar-brand" href="#">YouTrack</a>
+                  </div>
+                  <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav navbar-right">
+                      <li><a href="#"> Username</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
 
 <div id="container">
-    <h1>Welcome to YouTrack!</h1>
   <div class="container-fluid">
        <img class="center-block" id="logo" src="{% static 'main/images/easy-to-use.jpg' %}">
       {% block body %}
