--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -5,9 +5,16 @@
 {% block body %}
    <!-- Page Content -->
     <div class="container container-fluid login">
-        <form method="POST" class="form-group" action="" enctype="multipart/form-data">
+        <form method="POST" class="form-group" action="{% url 'signin' %}" >
            {% csrf_token %}
                    <div class="form-group">
+                        {% if messages %}
+                        <ul class="error">
+                            {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
                         <label for="username"><span class="glyphicon glyphicon-user"></span> Username: </label>
                         <input type="text" placeholder = "Enter username" id="username" name="username" class="form-control">
                    </div>
