--- a/main/templates/main/profile.html
+++ b/main/templates/main/profile.html
@@ -37,7 +37,14 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"> Username</a></li>
+          <div class="form-group">
+              {% if messages %}
+              <ul class="error">
+                  {% for message in messages %}
+                  <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                  {% endfor %}
+              </ul>
+              {% endif %}
       </ul>
     </div>
   </div>
